# grad_desc_ht

./: CMakeLists.txt  README.md
src/: CLContext.cpp  CLContext.hpp  CLKernel.hpp  WorkgroupManager.cpp  WorkgroupManager.hpp  main.cpp
src/CL/: Sobel.cl
